# email-triage-env

./: .env  .env.example  BlogPost.md  Dockerfile  README.md  agent.py  app.py  env.py  inference.py  metrics.py  openenv.yaml  pyproject.toml  requirements.txt  train_agent.ipynb  triage_report2.md  upload_to_hf.py
server/: app.py
